--- a/MrSurveyor/src/main/webapp/styles/header_style.css
+++ b/MrSurveyor/src/main/webapp/styles/header_style.css
@@ -1,80 +1,102 @@
 @charset "UTF-8";
 
 body {
-	margin: 0;
-	padding: 0;
-}
-
-.navbar-container {
-	display: flex;
-	align-items: center;
-	position: relative;
-}
-
-.right-side {
-	position: absolute;
-	top: 50%;
-	right: 30px;
-	transform: translateY(-50%);
-}
-
-img {
-    height: 50px;
-    margin-right: 20px;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
 }
 
 header {
-	background-color: #f3a712;
-	padding: 3px;
+    background-color: #f3a712;
+    color: #fff;
+    padding: 10px;
 }
 
-ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
+.navbar-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-li {
-	display: inline;
-	margin-right: 20px;
+.logo img {
+    height: 50px;
 }
 
-a {
-	color: 433a3f;
-	text-decoration: none;
-	padding: 5px;
+.nav-links {
+    list-style: none;
+    display: flex;
 }
 
-a:hover {
-	background-color: silver;
-	border-radius: 5px;
+.nav-links li {
+    margin-right: 20px;
 }
 
-a#logo:hover {
-	background-color: #f3a712;
-	border-radius: 5px;
+.nav-links a {
+    text-decoration: none;
+    color: #433a3f;
 }
 
-form {
-	display: inline-block;
-	margin-left: 20px;
+.nav-right {
+    display: flex;
+    align-items: center;
 }
 
-input[type="text"] {
-	padding: 5px;
-	width: 150px;
+.search-bar {
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 20px;
+    padding: 5px;
+    margin-right: 10px;
 }
 
-button[type="submit"] {
-	padding: 5px 10px;
-	background-color: #555;
-	color: white;
-	border: none;
-	border-radius: 5px;
-	cursor: pointer;
+.search-bar form {
+	display: flex;
+	align-items: center;
 }
 
-button[type="submit"]:hover {
-	background-color: #333;
+.input-container {
+    position: relative;
+    display: flex;
+    align-items: center;
 }
 
+.input-container button {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.search-bar img {
+	vertical-align: middle;
+    margin-right: 5px;
+    height: 30px;
+}
+
+.search-bar input {
+    border: none;
+    padding: 5px;
+    width: 200px;
+    background-color: transparent;
+    margin: 0;
+    font-size: 15px;
+    line-height: 15px;
+}
+
+.search-bar input:focus {
+    outline: none;
+}
+
+.search-bar button {
+    background-color: transparent;
+    border: none;
+    color: #433a3f;
+    cursor: pointer;
+}
+
+.cart-icon img, .user-icon img {
+    width: 30px;
+    margin-left: 20px;
+    cursor: pointer;
+}
