Added new content to footer.jsp and footer_style.css

--- a/MrSurveyor/src/main/webapp/styles/footer_style.css
+++ b/MrSurveyor/src/main/webapp/styles/footer_style.css
@@ -1,1 +1,57 @@
 @charset "UTF-8";
+
+footer {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background-color: #433a3f;
+	color: #eff1ed;
+	font-size: 12px;
+	padding: 0 10px 0 10px;
+}
+
+#logo img {
+	height: 50px;
+}
+
+.links {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.links ul {
+	list-style: none;
+}
+
+.social {
+	padding: 0 10px 0 10px;
+	position: relative;
+	right: 30px;
+}
+
+.links li {
+	display: inline-block;
+}
+
+.links a {
+	text-decoration: none;
+}
+
+.links img {
+	height: 40px;
+}
+
+#contacts {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: 0 5px 0 0;
+}
+
+#contacts img {
+	margin: 0 10px 0 30px;
+}
+
+
+
