--- a/MrSurveyor/src/main/webapp/styles/form_style.css
+++ b/MrSurveyor/src/main/webapp/styles/form_style.css
@@ -187,6 +187,7 @@ input:focus {
 	text-decoration: none;
 	color: #5f96f4;
 	transition: color 0.5s;
+	padding-bottom: 10px;
 }
 
 .help-info a:hover {
