--- a/MrSurveyor/src/main/webapp/styles/slider_product.css
+++ b/MrSurveyor/src/main/webapp/styles/slider_product.css
@@ -1,108 +1,112 @@
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 .head-slider {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: 2px solid #ddd;
-  max-width: 1000px;
-  height: 55px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	border-bottom: 2px solid #ddd;
+	max-width: 1300px;
+	height: 55px;
+	margin: auto;
+	margin-top: 50px;
 }
 
 .arrows {
-  cursor: pointer;
-  user-select: none;
+	cursor: pointer;
+	user-select: none;
 }
 
 .prev, .next {
-  right: 0px;
-  margin-right: 10px;
-  color: silver;
+	right: 0px;
+	margin-right: 10px;
+	color: silver;
 }
 
 .prev:hover, .next:hover {
-  color: black;
+	color: black;
 }
 
 .head-slider h2 {
-  position: relative;
+	position: relative;
 }
 
 .head-slider h2::after {
-  content: "";
-  position: absolute;
-  bottom: -15px;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  background-color: black;
+	content: "";
+	position: absolute;
+	bottom: -15px;
+	left: 0;
+	width: 100%;
+	height: 2px;
+	background-color: black;
 }
 
 .slider-container {
-  overflow: hidden;
-  width: 1000px;
+	margin: auto;
+	overflow: hidden;
+	width: 1000px;
 }
 
 .slides {
-  display: flex;
-  transition: transform 0.3s ease-in-out;
+	display: flex;
+	transition: transform 0.3s ease-in-out;
+	margin-bottom: 50px;
 }
 
 .slide-item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: column;
-  flex: 0 0 200px;
-  border: 1px solid transparent;
-  border-radius: 20px;
-  padding: 10px;
-  margin: 20px 50px 0 0;
-  box-sizing: border-box;
-  transition: background-color 0.3s ease;
-  user-select: none;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-direction: column;
+	flex: 0 0 200px;
+	border: 1px solid transparent;
+	border-radius: 20px;
+	padding: 10px;
+	margin: 20px 50px 0 0;
+	box-sizing: border-box;
+	transition: background-color 0.3s ease;
+	user-select: none;
 }
 
 .slide-item:hover {
-  border: 1px solid #ccc;
-  background-color: #f5f5f5;
-  cursor: pointer;
+	border: 1px solid #ccc;
+	background-color: #f5f5f5;
+	cursor: pointer;
 }
 
 .slide-img {
-  width: 65%;
+	width: 65%;
 }
 
 .prod-description {
-  padding-top: 10px;
+	padding-top: 10px;
 }
 
 .prod-category a {
-  text-decoration: none;
-  font-size: 12px;
-  color: #768b9e;
+	text-decoration: none;
+	font-size: 12px;
+	color: #768b9e;
 }
 
 .prod-category a:visited {
-  color: #768b9e;
+	color: #768b9e;
 }
 
 .prod-name h2 {
-  font-size: 14px;
+	font-size: 14px;
 }
 
 .prod-name a {
-  text-decoration: none;
-  color: black;
+	text-decoration: none;
+	color: black;
 }
 
 .prod-name a:visited {
-  color: black;
+	color: black;
 }
 
 .prod-price {
-  font-size: 20px;
-  color: #333e48;
+	font-size: 20px;
+	color: #333e48;
 }
