--- a/MrSurveyor/src/main/webapp/styles/cart.css
+++ b/MrSurveyor/src/main/webapp/styles/cart.css
@@ -2,6 +2,16 @@
 	margin: 0;
 }
 
+.flex-container {
+	display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main {
+	flex-grow: 1;
+}
+
 h1 {
 	margin: 20px;
 }
