--- a/MrSurveyor/src/main/webapp/styles/slider.css
+++ b/MrSurveyor/src/main/webapp/styles/slider.css
@@ -2,6 +2,12 @@
 	box-sizing: border-box;
 }
 
+.flex-container {
+	display: flex;
+	flex-direction: column;
+	overflow: hidden;
+}
+
 .hero-slider-container {
 	max-width: 1300px;
 	position: relative;
@@ -10,6 +16,8 @@
 
 .hero-slide-img {
 	width: 100%;
+	user-select: none;
+  	pointer-events: none;
 }
 
 .hero-slides {
@@ -20,9 +28,9 @@
 	cursor: pointer;
 	position: absolute; top 50%;
 	width: auto;
-	margin-top: -22px;
+	margin-top: -60px;
 	padding: 16px;
-	color: lime;
+	color: gray;
 	font-weight: bold;
 	font-size: 18px;
 	transition: 0.6s ease;
@@ -40,13 +48,24 @@
 }
 
 .text {
-	color: #f2f2f2;
 	font-size: 15px;
 	padding: 8px 12px;
 	position: absolute;
 	bottom: 8px;
 	width: 100%;
 	text-align: center;
+}
+
+#text1 {
+	color: white;
+}
+
+#text2 {
+	color: lightgray;
+}
+
+#text3 {
+	color: #333333;
 }
 
 .numbertext {
@@ -88,4 +107,10 @@
   	to {
     	opacity: 1;
   	}
+}
+
+@media (max-width: 870px) {
+	.text {
+		display: none;
+	}
 }
