--- a/MrSurveyor/src/main/webapp/styles/cart.css
+++ b/MrSurveyor/src/main/webapp/styles/cart.css
@@ -7,10 +7,11 @@
 .flex-container {
 	display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 150vh;
 }
 
 main {
+	margin-top: 30px;
 	flex-grow: 1;
 }
 
