--- a/MrSurveyor/src/main/webapp/styles/grid_style.css
+++ b/MrSurveyor/src/main/webapp/styles/grid_style.css
@@ -1,6 +1,15 @@
 @charset "UTF-8";
 
-@import "fonts/inter_font.css";
+.flex-container {
+	display: flex;
+    flex-direction: column;
+    min-height: 150vh;
+}
+
+.category-main {
+	margin: 30px 0;
+	flex-grow: 1;
+}
 
 .grid-container {
 	display: grid;
@@ -9,48 +18,39 @@
 }
 
 .category {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-direction: column;
+	flex: 0 0 200px;
+	border-radius: 20px;
+	margin: 10px 10px;
+	box-sizing: border-box;
+	text-align: center;
+	transition: background-color 0.3s ease;
+	user-select: none;
 	border: 1px solid transparent;
 	background-color: #f2f2f2;
 	padding: 20px;
-	text-align: center;
-	user-select: none;
 }
 
 .category:hover {
 	border: 1px solid #ccc;
 	background-color: #f5f5f5;
-}
-
- a {
-	text-decoration: none;
-	color: black;
-}
-
-img {
-	max-width: 100%;
-	height: auto;
+	cursor: pointer;
 }
 
 .category h3 {
 	margin-top: 10px;
+	font-size: 16px;
 }
 
-
-.product {
-    border: 1px solid #ccc;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.category a {
+	text-decoration: none;
+	color: black;
 }
 
-.product img {
-    max-width: 100%;
-    height: auto;
+.category img {
+	max-width: 100%;
+	height: auto;
 }
-
-.product h3 {
-    margin: 10px 0;
-}
-
