--- a/MrSurveyor/src/main/webapp/styles/slider.css
+++ b/MrSurveyor/src/main/webapp/styles/slider.css
@@ -7,6 +7,7 @@
 .flex-container {
 	display: flex;
 	flex-direction: column;
+	min-height: 100vh;
 	overflow: hidden;
 }
 
@@ -97,21 +98,51 @@
 	background-color: #717171;
 }
 
-.fade {
-	animation-name: fade;
-	animation-duration: 1.5s;
+.hero-fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
 }
 
 @keyframes fade {
-	from {
-		opacity: 0.4;
-  	}
-  	to {
-    	opacity: 1;
-  	}
+  from {
+  	opacity: .4
+  } 
+  to {
+  	opacity: 1
+  }
 }
 
 @media (max-width: 870px) {
+	.text {
+		font-size: 15px;
+	}
+}
+
+@media (max-width: 820px) {
+	.text {
+		font-size: 14px;
+	}
+}
+
+@media (max-width: 720px) {
+	.text {
+		font-size: 13px;
+	}
+}
+
+@media (max-width: 680px) {
+	.text {
+		font-size: 12px;
+	}
+}
+
+@media (max-width: 610px) {
+	.text {
+		font-size: 10px;
+	}
+}
+
+@media (max-width: 500px) {
 	.text {
 		display: none;
 	}
