--- a/MrSurveyor/src/main/webapp/styles/slider_product.css
+++ b/MrSurveyor/src/main/webapp/styles/slider_product.css
@@ -64,59 +64,59 @@
 	margin-bottom: 50px;
 }
 
-.slide-item {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	flex-direction: column;
-	flex: 0 0 200px;
-	border: 1px solid transparent;
-	border-radius: 20px;
-	padding: 10px;
-	margin: 20px 50px 0 0;
-	box-sizing: border-box;
-	transition: background-color 0.3s ease;
-	user-select: none;
-}
+/* .slide-item { */
+/* 	display: flex; */
+/* 	justify-content: space-between; */
+/* 	align-items: center; */
+/* 	flex-direction: column; */
+/* 	flex: 0 0 200px; */
+/* 	border: 1px solid transparent; */
+/* 	border-radius: 20px; */
+/* 	padding: 10px; */
+/* 	margin: 20px 50px 0 0; */
+/* 	box-sizing: border-box; */
+/* 	transition: background-color 0.3s ease; */
+/* 	user-select: none; */
+/* } */
 
-.slide-item:hover {
-	border: 1px solid #ccc;
-	background-color: #f5f5f5;
-	cursor: pointer;
-}
+/* .slide-item:hover { */
+/* 	border: 1px solid #ccc; */
+/* 	background-color: #f5f5f5; */
+/* 	cursor: pointer; */
+/* } */
 
-.slide-img {
-	width: 65%;
-}
+/* .slide-img { */
+/* 	width: 65%; */
+/* } */
 
-.prod-description {
-	padding-top: 10px;
-}
+/* .prod-description { */
+/* 	padding-top: 10px; */
+/* } */
 
-.prod-category a {
-	text-decoration: none;
-	font-size: 12px;
-	color: #768b9e;
-}
+/* .prod-category a { */
+/* 	text-decoration: none; */
+/* 	font-size: 12px; */
+/* 	color: #768b9e; */
+/* } */
 
-.prod-category a:visited {
-	color: #768b9e;
-}
+/* .prod-category a:visited { */
+/* 	color: #768b9e; */
+/* } */
 
-.prod-name h2 {
-	font-size: 14px;
-}
+/* .prod-name h2 { */
+/* 	font-size: 14px; */
+/* } */
 
-.prod-name a {
-	text-decoration: none;
-	color: black;
-}
+/* .prod-name a { */
+/* 	text-decoration: none; */
+/* 	color: black; */
+/* } */
 
-.prod-name a:visited {
-	color: black;
-}
+/* .prod-name a:visited { */
+/* 	color: black; */
+/* } */
 
-.prod-price {
-	font-size: 20px;
-	color: #333e48;
-}
+/* .prod-price { */
+/* 	font-size: 20px; */
+/* 	color: #333e48; */
+/* } */
