--- a/MrSurveyor/src/main/webapp/styles/header_style.css
+++ b/MrSurveyor/src/main/webapp/styles/header_style.css
@@ -122,6 +122,34 @@ header {
 	cursor: pointer;
 }
 
+.user-dropdown-content {
+    display: none;
+    position: absolute;
+    right: 5px;
+    top: 52px;
+    background-color: #fff;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.user-dropdown-content a {
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    color: #333;
+}
+
+.user-dropdown-content a:hover {
+	background-color: #f1f1f1;
+}
+
+.header-menu {
+	padding: 0;
+	list-style: none;
+	font-size: 13px;
+}
+
 @media ( max-width : 1120px) {
 	.navbar-container {
 		display: none;
