Fixed some bugs and added new CSS rules.

--- a/MrSurveyor/src/main/webapp/styles/form_style.css
+++ b/MrSurveyor/src/main/webapp/styles/form_style.css
@@ -41,6 +41,9 @@ main {
 	width: 300px;
 	border-radius: 15px;
 	border: 1px solid black;
+	margin: auto;
+	margin-top: 50%;
+	margin-bottom: 50%;
 }
 
 .address * {
