Fixed some bugs and added new CSS rules.

--- a/MrSurveyor/src/main/webapp/styles/form_style.css
+++ b/MrSurveyor/src/main/webapp/styles/form_style.css
@@ -10,26 +10,14 @@ body {
 	box-sizing: border-box;
 }
 
-.flex-container {
-	display: flex;
-    flex-direction: column;
-}
-
-main {
-	flex-grow: 1;
-}
-
 .main-box {
 	background-color: #eff1ed;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	height: 100vh;
-}
-
-.registration {
-	height: 140vh;
+	gap: 100px;
+	/*height: 100vh;*/
 }
 
 .child-box {
@@ -41,9 +29,6 @@ main {
 	width: 300px;
 	border-radius: 15px;
 	border: 1px solid black;
-	margin: auto;
-	margin-top: 50%;
-	margin-bottom: 50%;
 }
 
 .address * {
@@ -276,59 +261,4 @@ input:focus {
 .form-control.error small {
 	visibility: visible;
 	color: #e74c3c;
-}
-
-@media (max-height: 460px) {
-	
-	.submit.loading {
-		width: auto;
-		height: 35px;
-	}
-	
-	#header {
-		font-size: 30px;
-		margin-bottom: 20px;
-	}
-	
-	.child-box * {
-		font-size: 13px;
-		padding: 0;
-	}
-	
-    .child-box {
-        width: 80%;
-    }
-    
-    .child-box form input {
-		margin: 10px 0;
-		padding: 8px 12px;
-		margin-bottom: 15px;
-	}
-
-}
-
-@media (max-height: 400px) {
-	#header {
-		font-size: 25px;
-		margin-bottom: 20px;
-	}
-	
-	.child-box form input {
-		margin-bottom: 0;
-	}
-	
-	.address input[type="submit"] {
-		margin-bottom: 0;
-	}
-	
-	.submit input[type="submit"] {
-		padding: 5px 10px;
-		margin: 15px 0;
-	}
-}
-
-@media (max-height: 340px) {
-	.child-box {
-		display: none;	
-	}
 }
