--- a/MrSurveyor/src/main/webapp/styles/header_style.css
+++ b/MrSurveyor/src/main/webapp/styles/header_style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 
 @import "fonts/inter_font.css";
+@import "icons/material_outlined_fill.css";
 
 body {
 	margin: 0;
@@ -22,6 +23,26 @@ img {
 	-moz-user-drag: none;
 	-o-user-drag: none;
 	user-select: none;
+}
+
+#switch, #user-dropdown-toggle, #shopping-cart {
+	-webkit-user-drag: none;
+	-khtml-user-drag: none;
+	-moz-user-drag: none;
+	-o-user-drag: none;
+	user-select: none;
+	cursor: pointer;
+	font-size: 35px;
+	margin-left: 10px;
+	color: black;
+}
+
+#user-dropdown-toggle, #shopping-cart {
+	font-variation-settings:
+  	'FILL' 1,
+  	'wght' 400,
+  	'GRAD' 0,
+  	'opsz' 24
 }
 
 header {
@@ -80,6 +101,52 @@ header {
 	display: flex;
 	align-items: center;
 	margin-right: 2%;
+}
+
+.manager-nav {
+	padding: 0;
+	width: 250px;
+	flex-direction: row-reverse;
+	justify-content: space-between;
+}
+
+.roles-dropdown-content {
+	display: none;
+    position: absolute;
+    color: #333;
+    right: 170px;
+    top: 52px;
+    background-color: #fff;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.roles-dropdown-content a {
+	padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    color: #333;
+}
+
+.roles-dropdown-content a:hover {
+	background-color: #f1f1f1;
+}
+
+#roles-menu {
+	padding: 0;
+	list-style: none;
+	font-size: 15.5px;
+}
+
+#roles-menu li {
+	margin: 20px 0;
+	padding-left: 20px;
+}
+
+.roles-dropdown-content #roles-menu li {
+	padding: 0;
+	margin: auto;
 }
 
 .search-bar {
