--- a/MrSurveyor/src/main/webapp/styles/icons/material_outlined.css
+++ b/MrSurveyor/src/main/webapp/styles/icons/material_outlined.css
@@ -19,5 +19,6 @@
   word-wrap: normal;
   direction: ltr;
   -moz-font-feature-settings: 'liga';
+  font-feature-settings: 'liga';
   -moz-osx-font-smoothing: grayscale;
 }
