--- a/MrSurveyor/src/main/webapp/styles/header_style.css
+++ b/MrSurveyor/src/main/webapp/styles/header_style.css
@@ -37,6 +37,10 @@ img {
 	color: black;
 }
 
+#search-icon {
+	font-size: 28px;
+}
+
 #user-dropdown-toggle, #shopping-cart {
 	font-variation-settings:
   	'FILL' 1,
@@ -136,7 +140,7 @@ header {
 #roles-menu {
 	padding: 0;
 	list-style: none;
-	font-size: 15.5px;
+	font-size: 13px;
 }
 
 #roles-menu li {
@@ -193,7 +197,7 @@ header {
 	border: none;
 	border-radius: 20px;
 	padding: 5px;
-	width: 343px;
+	width: 350px;
 	background-color: transparent;
 	margin: 0;
 	font-size: 15px;
