--- a/MrSurveyor/src/main/webapp/styles/enduser_home.css
+++ b/MrSurveyor/src/main/webapp/styles/enduser_home.css
@@ -14,6 +14,19 @@ main {
 	flex-grow: 1;
 }
 
+#details-enduser-msg {
+	display: flex;
+	flex-direction: column;
+	height: 150px;
+	width: 300px;
+	justify-content: space-around;
+}
+
+#details-enduser-msg p {
+	font-size: 14px; 
+	margin: 0;
+}
+
 .side-menu-item {
 	list-style: none;
 	border: 1px solid black;
