Fixed some bugs and added new features.

--- a/MrSurveyor/src/main/webapp/styles/slider.css
+++ b/MrSurveyor/src/main/webapp/styles/slider.css
@@ -29,7 +29,8 @@
 
 .hero-prev, .hero-next {
 	cursor: pointer;
-	position: absolute; top 50%;
+	position: absolute; 
+	top: 50%;
 	width: auto;
 	margin-top: -60px;
 	padding: 16px;
