--- a/MrSurveyor/src/main/webapp/styles/cart.css
+++ b/MrSurveyor/src/main/webapp/styles/cart.css
@@ -33,6 +33,7 @@ h1 {
 
 .total-price a {
 	display: inline-block;
+	text-align: center;
 	width: 70px;
 	padding: 10px 20px;
 	border-radius: 5px;
@@ -41,10 +42,6 @@ h1 {
 	color: white;
 	font-weight: bold;
 	transition: background-color 0.5s, color 0.5s, box-shadow 0.3s;
-}
-
-.total-price a:visited {
-	color: black;
 }
 
 .total-price a:hover {
