--- a/MrSurveyor/src/main/webapp/styles/orders_manager_view.css
+++ b/MrSurveyor/src/main/webapp/styles/orders_manager_view.css
@@ -1,10 +1,17 @@
 @charset "UTF-8";
 
-body {
-	font-family: Arial, sans-serif;
+.flex-container {
+	display: flex;
 	background-color: #f0f0f0;
-	margin: 0;
-	padding: 0;
+    flex-direction: column;
+    min-height: 150vh;
+}
+
+main {
+	margin-top: 30px;
+	margin-left: 30px;
+	margin-bottom: 30px;
+	flex-grow: 1;
 }
 
 .container {
@@ -58,19 +65,38 @@ h1 {
 	border-radius: 4px;
 }
 
-.form-group button {
-	background-color: #007bff;
-	color: #fff;
+.form-group input {
+	width: 80%;
+}
+
+button {
+	width: auto;
+	margin: 0;
 	padding: 10px 20px;
-	border: none;
-	border-radius: 4px;
 	cursor: pointer;
+	border: none;
+	border-radius: 5px;
+	background-color: black;
+	color: white;
+	font-weight: bold;
+	transition: background-color 0.5s, color 0.5s, box-shadow 0.3s;
+	margin: 10px 0;
+}
+
+button:hover {
+	box-shadow: 4px 3px 6px rgba(0, 0, 0, 0.3);
+	background-color: #f3a712;
+	color: black;
 }
 
 .order-form {
-	/*display: none;*/
+	display: none;
 	background-color: #f9f9f9;
 	padding: 10px;
 	margin-top: 10px;
 	border: 1px solid #ccc;
+}
+
+.error-message {
+	color: red;
 }
