--- a/MrSurveyor/src/main/webapp/styles/form_style.css
+++ b/MrSurveyor/src/main/webapp/styles/form_style.css
@@ -2,6 +2,20 @@
 
 @import "fonts/inter_font.css";
 
+.flex-container {
+	display: flex;
+    flex-direction: column;
+    min-height: 150vh;
+}
+
+main {
+	display: flex;
+	justify-content: flex-start;
+	margin-top: 30px;
+	margin-bottom: 50px;
+	flex-grow: 1;
+}
+
 body {
 	font-family: 'Inter', sans-serif;
 	margin: 0;
@@ -16,7 +30,6 @@ body {
 	justify-content: center;
 	align-items: center;
 	gap: 100px;
-	/*height: 100vh;*/
 }
 
 .child-box {
@@ -170,8 +183,7 @@ input:focus {
 	border: 4px solid transparent;
 	border-top-color: blue;
 	border-radius: 50%;
-	animation: spin 2s linear infinite, changeColor 4s linear infinite
-		alternate;
+	animation: spin 2s linear infinite, changeColor 4s linear infinite alternate;
 	visibility: hidden;
 }
 
@@ -288,4 +300,44 @@ input:focus {
 .form-control.error small {
 	visibility: visible;
 	color: #e74c3c;
+}
+
+select.catalog,
+textarea {
+	width: 100%;
+	padding: 5px;
+	margin-bottom: 10px;
+}
+
+textarea {
+	background-color: #eff1ed;
+	border-radius: 5px;
+}
+
+#add-form-container {
+	width: 50%;
+	margin: auto;
+}
+
+button.catalog {
+	width: auto;
+	margin: 0;
+	padding: 10px 20px;
+	cursor: pointer;
+	border: none;
+	border-radius: 5px;
+	background-color: black;
+	color: white;
+	font-weight: bold;
+	transition: background-color 0.5s, color 0.5s, box-shadow 0.3s;
+}
+
+button.catalog:hover {
+	box-shadow: 4px 3px 6px rgba(0, 0, 0, 0.3);
+	background-color: #f3a712;
+	color: black;
+}
+
+#subcategory-container {
+	display: none;
 }
